--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@astrojs/node": "^5.1.0",
     "@astrojs/tailwind": "^3.1.1",
+    "@astropub/icons": "^0.2.0",
     "astro": "^2.1.3",
+    "node-fetch": "^3.3.1",
     "tailwindcss": "^3.2.7"
   }
 }
