--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^3.1.1",
     "@astropub/icons": "^0.2.0",
     "astro": "^2.1.3",
+    "astro-seo": "^0.7.2",
     "node-fetch": "^3.3.1",
     "tailwindcss": "^3.2.7"
   }
