--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astropub/icons": "^0.2.0",
     "astro": "^2.1.3",
     "astro-seo": "^0.7.2",
+    "mixpanel": "^0.17.0",
     "node-fetch": "^3.3.1",
     "tailwindcss": "^3.2.7"
   }
